# datalake-v2

./: .gitignore  .sops.yaml  Makefile  README.md  hydrator.metadata
.github/workflows/: ingest-image.yaml  lint.yaml
apps/: project.yaml
apps/infra/: argo-workflows.yaml  cloudnative-pg.yaml  dex.yaml  external-secrets.yaml  lakekeeper.yaml  monitoring.yaml  trino.yaml
chart/: Chart.yaml  README.md  hydrator.metadata  manifest.yaml  values-cyfronet.yaml  values-kind.yaml  values.yaml
chart/templates/: _helpers.tpl  argocd-servicemonitor.yaml  datalake-alerts.yaml  echo-receiver.yaml  hello-cronworkflow.yaml  ingest-cronworkflows.yaml  lakekeeper-db.yaml  lakekeeper-pg-encryption.yaml  landing-db.yaml  workflows-rbac.yaml
docs/runbooks/: adding-a-component.md  backfill.md  bootstrap-cyfronet.md  ingestion-pipeline.md  ml-extraction.md  xid-wraparound.md
environments/cyfronet/: argocd-values.yaml
environments/kind/: argocd-values.yaml
hack/: kind-config.yaml  kind-up.sh  kind-verify.sh  lakekeeper-warehouse.sh  lint.sh  reset-pipeline.sh  run-ingest-once.sh  seed-fixture.sh
hack/lib/: warehouse-config.sh
ingest/: .dockerignore  Dockerfile  pyproject.toml
ingest/src/alice_ingest/: __init__.py  contract_columns.py  jdl.py  maintenance.py  pipeline.py  retention.py  sitesonar.py  views.py
ingest/tests/: test_jdl.py  test_maintenance.py  test_pipeline.py  test_retention.py  test_sitesonar.py  test_views.py
ingest/tests/fixtures/: jdl_samples.json
tools/: README.md  extract_training_data.py
tools/tests/: test_extract_training_data.py
(+3 files in other folders)
